Multiple file folder structure.

--- a/lectures/Overview & First Program.ipynb
+++ b/lectures/Overview & First Program.ipynb
@@ -139,7 +139,9 @@
     "\n",
     "You may use an editor of your choice, though I recommend you do the following...\n",
     "\n",
-    "[Sign up for free student Integrated Development Enviornments from JetBrains](https://www.jetbrains.com/student/)"
+    "[Sign up for free student Integrated Development Enviornments from JetBrains](https://www.jetbrains.com/student/)\n",
+    "\n",
+    "[Start Here](https://www.jetbrains.com/clion/features/start-your-project.html)"
    ]
   },
   {
@@ -258,15 +260,6 @@
    "source": [
     "`echo $?`"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
