--- a/lectures/Work with Multiple Files.ipynb
+++ b/lectures/Work with Multiple Files.ipynb
@@ -36,7 +36,8 @@
     "//include guards make sure that names don't get included more than once\n",
     "#ifndef GEOMETRY_H_\n",
     "#define GEOMETRY_H_\n",
-    "double calc_area_of_circle(double radius);\n",
+    "\n",
+    "double calc_area_of_square(double edge);\n",
     "\n",
     "#endif "
    ]
@@ -51,10 +52,10 @@
    "source": [
     "//geometry.cpp\n",
     "#include <cmath>\n",
-    "#include <geometry.h>\n",
+    "#include \"../include/geometric_utils.h\"\n",
     "\n",
-    "double calc_area_of_circle(double radius) {\n",
-    "    return 3.14 * std::pow(radius, 2);\n",
+    "double calc_area_of_square(double edge) {\n",
+    "    return std::pow(edge, 2);\n",
     "}"
    ]
   },
@@ -114,13 +115,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Expected Test Outcomes\n",
+    "| Side    | Area  |\n",
+    "| ------------- :| -----:|\n",
+    "| 1         | 1|\n",
+    "| 2     |  4   | \n",
+    "| 5| 25|\n",
+    "| 9| 81|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Assertions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "ASSERT_TRUE( true == false ); // fail\n",
+    "ASSERT_TRUE( false ); //fail"
+   ]
   }
  ],
  "metadata": {
