Updated link to example.

--- a/lectures/Work with Multiple Files.ipynb
+++ b/lectures/Work with Multiple Files.ipynb
@@ -111,7 +111,7 @@
     "### What are downsides to each? \n",
     "### Is there a best of both worlds?\n",
     "\n",
-    "See [this]() for a complete example."
+    "See [this](https://github.com/donigian/cpp-lecture-series/tree/master/code/Multiple%20File%20Structure) for a complete example."
    ]
   },
   {
