Added new labs.

--- a/labs/Lab 2.ipynb
+++ b/labs/Lab 2.ipynb
@@ -4,12 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From your own experience, describe an activity that would not have been possible without computers.\n",
+    "## Lab 1\n",
+    "Implement a calculator which supports addition, subtraction, multiplication and\n",
+    "division. \n",
     "\n",
-    "Make a list of 10 activities that people do that do not involve computers in any way.\n",
+    "```\n",
+    "calc <num1> op <num2>\n",
+    "```\n",
     "\n",
-    "Write an explanation (at most 200 words) of why you would like to be a computer programmer. If you don't like to be explain why not?"
+    "Please make sure you do sufficient testing."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
