--- a/labs/Lab 3.ipynb
+++ b/labs/Lab 3.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From your own experience, describe an activity that would not have been possible without computers.\n",
+    "[Programming: Principles and Practice Using C++](https://www.amazon.com/Programming-Principles-Practice-Using-C/dp/0321543726)\n",
     "\n",
-    "Make a list of 10 activities that people do that do not involve computers in any way.\n",
+    "Chapter 3:\n",
     "\n",
-    "Write an explanation (at most 200 words) of why you would like to be a computer programmer. If you don't like to be explain why not?"
+    "Problems 6, 7 & 11"
    ]
   }
  ],
