--- a/labs/In Class Exercise 4.ipynb
+++ b/labs/In Class Exercise 4.ipynb
@@ -108,6 +108,85 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "// conversion.h\n",
+    "// Created by Armen Donigian on 6/14/16.\n",
+    "//\n",
+    "\n",
+    "// include guard\n",
+    "#ifndef MILESTOKM_CONVERSION_H\n",
+    "#define MILESTOKM_CONVERSION_H\n",
+    "\n",
+    "double prompt_user_for_miles();\n",
+    "double convert_miles_to_km(double miles);\n",
+    "void output_km_to_user(double km, double miles);\n",
+    "\n",
+    "#endif //MILESTOKM_CONVERSION_H\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "// conversion.cpp\n",
+    "// Created by Armen Donigian on 6/14/16.\n",
+    "//\n",
+    "\n",
+    "#include <iostream>\n",
+    "using namespace std;\n",
+    "\n",
+    "double prompt_user_for_miles() {\n",
+    "    cout << \"how many miles did you drive today?\" << endl;\n",
+    "    double miles = 0.0;\n",
+    "    cin >> miles;\n",
+    "    return miles;\n",
+    "}\n",
+    "\n",
+    "double convert_miles_to_km(double miles) {\n",
+    "    const double MILES_TO_KM = 1.60934;\n",
+    "    double result = miles * MILES_TO_KM;\n",
+    "    return result;\n",
+    "}\n",
+    "\n",
+    "void output_km_to_user(double km, double miles) {\n",
+    "    cout << \" so you drive \" << miles << \" miles and \"\n",
+    "    << km << \" kilometers\" << endl;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "// main.cpp\n",
+    "#include <iostream>\n",
+    "#include \"include/conversion.h\"\n",
+    "\n",
+    "using namespace std;\n",
+    "\n",
+    "int main() {\n",
+    "    double miles = prompt_user_for_miles();\n",
+    "    double km = convert_miles_to_km(miles);\n",
+    "    output_km_to_user(km, miles);\n",
+    "    return 0;\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -121,7 +200,63 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#include <iostream>\n",
+    "/* Two Problems\n",
+    " * 1) hard coded prices which require re-compilation (BAD)\n",
+    " * 2) hard coded to 3 parameters (products/prices) (REALLY BAD)\n",
+    "*/\n",
+    "\n",
+    "using namespace std;\n",
+    "\n",
+    "double calculate_total_cost_of_cart(double price1,\n",
+    "                                    double price2,\n",
+    "                                    double price3){\n",
+    "    cout << \"Total Cost: \" << price1 + price2 + price3;\n",
+    "}\n",
+    "\n",
+    "int main(int argc, char * argv[]) {\n",
+    "\n",
+    "    double price1=1.99, price2=1.99, price3=2.99;\n",
+    "    calculate_total_cost_of_cart(price1, price2, price3);\n",
+    "    return 0;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Improved version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#include <iostream>\n",
+    "\n",
+    "using namespace std;\n",
+    "\n",
+    "double calculate_total_cost_of_cart(double prices[], int count) {\n",
+    "    double total = 0.0;\n",
+    "    for (int i = 0; i <= count; i++){\n",
+    "        total = total + prices[i];\n",
+    "    }\n",
+    "    cout << \"Total Cost: \" << total;\n",
+    "}\n",
+    "\n",
+    "int main(int argc, char *argv[]) {\n",
+    "\n",
+    "    double prices[] = {1.99, 1.99, 2.99, 3.99};\n",
+    "    calculate_total_cost_of_cart(prices, 3);\n",
+    "    return 0;\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
